Backported qol features
TODO: jei compat